# vivid-cef

./: AGENTS.md  CMakeLists.txt  README.md  vivid-package.json
.github/workflows/: smoke.yml
examples/: audio-element.html  audio-tone.html  dashboard.html  hello-world.html  hello.html  interactive.html  transparent-overlay.html  webgl-cube.html
graphs/: browser_2d_effects.json  browser_3d_cube.json  browser_audio.json  browser_audio_element.json  browser_hello.json  browser_webgl.json  interactive_demo.json
src/: browser_audio_bridge.cpp  browser_audio_bridge.h  browser_audio_in.cpp  browser_audio_sync_policy.h  browser_cef_gate.cpp  browser_cef_gate.h  browser_gpu_helper.cpp  browser_gpu_helper.h  browser_input_dispatch.cpp  browser_input_dispatch.h  browser_op.cpp  browser_op.h  browser_url_utils.cpp  browser_url_utils.h  cef_client.cpp  cef_client.h  cef_manager.cpp  cef_manager.h
subprocess/: Info.plist  main.cpp
tests/: test_browser_audio_bridge.cpp  test_browser_audio_bridge_generation.cpp  test_browser_audio_sync_policy.cpp  test_browser_cef_gate.cpp
